# varfxi

./: .gitignore  MXN_data.csv  README.md  VaR-FX Interventions.ipynb  __init__.py  create_kernel.sh  distGARCH.py  joyplot2.py  mxn_estimation.py  paper_estimation.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
archive/: distGARCH.py
case_study/: VaR-FX Interventions.ipynb
case_study/data/: Thailand.csv  Thailand.xlsx
case_study/output/: vol_dist_opt_table.csv
data/: MXN_raw_data.xlsx  clean_data.csv  intervention_data.csv  macro_data.csv
latex/: bibliography.bib  ijcb_paper.fff  ijcb_paper.lot  paper.tex  slides-extended.tex  slides.out  slides.tex
latex/auto/: slides.el
modules/: distGARCH.py
modules/quantileproj/: quantileproj.py
notebooks/: Untitled.ipynb  test_other_models.ipynb
output/: .gitignore  benchmark_table.csv  benchmark_table.tex  benchmark_table_formatted.csv  financial_perf.csv  financial_perf.tex  financial_perf_short.tex  regressions_table.tex  regressions_table_short.csv  regressions_table_short.tex  regressions_table_short_formatted.tex
researchpaper/latex/: .gitignore  bibliography.bib  ijcb_paper.lof  ijcb_paper.tex  ijcb_paper.ttt  paper.lof  paper.lot  paper.tex  slides-extended.tex  slides.tex
researchpaper/output/: benchmark_table.csv  benchmark_table_formatted.tex  benchmark_table_formatted.xlsx  financial_perf.csv  financial_perf.tex  financial_perf_formatted.xlsx  regressions_table.tex  (+3 more)
slides/: slides.tex
varfxi/: distGARCH.py  distGARCH_v2.py  quantileproj.py
(+6 files in other folders)
